Added Fourier_Image function, but can't make it work

--- a/lab_step1.glade
+++ b/lab_step1.glade
@@ -504,6 +504,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="image_position">right</property>
+                    <signal name="clicked" handler="Fourier_Image" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
