--- a/lab_pt1.glade
+++ b/lab_pt1.glade
@@ -19,6 +19,16 @@
       </row>
     </data>
   </object>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkEntryCompletion" id="entrycompletion1"/>
   <object class="GtkListStore" id="m param list">
     <columns>
@@ -574,20 +584,25 @@ omega_j = delta omega×j - delta omega× m/2</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="Freq_start_entry">
-                    <property name="width_request">30</property>
+                  <object class="GtkSpinButton" id="frequency_from">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="halign">center</property>
+                    <property name="valign">center</property>
                     <property name="hexpand">True</property>
-                    <property name="max_length">2</property>
-                    <property name="width_chars">2</property>
-                    <property name="max_width_chars">2</property>
-                    <property name="input_purpose">digits</property>
+                    <property name="vexpand">True</property>
+                    <property name="width_chars">3</property>
+                    <property name="max_width_chars">3</property>
+                    <property name="shadow_type">none</property>
+                    <property name="progress_pulse_step">1</property>
+                    <property name="input_purpose">number</property>
+                    <property name="adjustment">adjustment1</property>
+                    <property name="climb_rate">1</property>
+                    <signal name="value-changed" handler="On_Frequency_From" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -606,16 +621,22 @@ omega_j = delta omega×j - delta omega× m/2</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="Freq_end_entry">
-                    <property name="width_request">30</property>
+                  <object class="GtkSpinButton" id="frequency_to">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="halign">center</property>
+                    <property name="valign">center</property>
                     <property name="hexpand">True</property>
-                    <property name="max_length">2</property>
-                    <property name="width_chars">2</property>
-                    <property name="max_width_chars">2</property>
+                    <property name="vexpand">True</property>
+                    <property name="width_chars">3</property>
+                    <property name="max_width_chars">3</property>
+                    <property name="shadow_type">none</property>
+                    <property name="progress_pulse_step">0</property>
                     <property name="input_purpose">number</property>
+                    <property name="adjustment">adjustment2</property>
+                    <property name="climb_rate">1</property>
+                    <property name="value">1</property>
+                    <signal name="value-changed" handler="On_Frequency_To" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -625,7 +646,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                 </child>
                 <child>
                   <object class="GtkButton" id="Freq_destroy">
-                    <property name="label" translatable="yes">Подавление</property>
+                    <property name="label" translatable="yes">Подавить</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
