--- a/lab_pt1.glade
+++ b/lab_pt1.glade
@@ -25,7 +25,8 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
-    <property name="upper">100</property>
+    <property name="lower">1</property>
+    <property name="upper">1000</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -82,7 +83,7 @@
   <object class="GtkWindow" id="Main Window">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
-    <signal name="delete-event" handler="CloseApp" swapped="no"/>
+    <signal name="delete-event" handler="closeApp" swapped="no"/>
     <child>
       <object class="GtkNotebook">
         <property name="visible">True</property>
@@ -203,7 +204,7 @@
                         <property name="vexpand">True</property>
                         <property name="model">p param list</property>
                         <property name="active">0</property>
-                        <signal name="changed" handler="On_Changed_P" swapped="no"/>
+                        <signal name="changed" handler="onChangedP" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText"/>
                           <attributes>
@@ -230,7 +231,7 @@
                         <property name="text" translatable="yes">20</property>
                         <property name="caps_lock_warning">False</property>
                         <property name="input_purpose">number</property>
-                        <signal name="changed" handler="On_Changed_X" swapped="no"/>
+                        <signal name="changed" handler="onChangedX" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -307,7 +308,7 @@
                         <property name="vexpand">True</property>
                         <property name="model">m param list</property>
                         <property name="active">0</property>
-                        <signal name="changed" handler="On_Changed_M" swapped="no"/>
+                        <signal name="changed" handler="onChangedM" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText" id="m paramlist"/>
                           <attributes>
@@ -357,7 +358,7 @@
                         <property name="vexpand">True</property>
                         <property name="model">L param list</property>
                         <property name="active">0</property>
-                        <signal name="changed" handler="On_Changed_L" swapped="no"/>
+                        <signal name="changed" handler="onChangedL" swapped="no"/>
                         <child>
                           <object class="GtkCellRendererText" id="Lparamlist"/>
                           <attributes>
@@ -514,7 +515,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="image_position">right</property>
-                    <signal name="clicked" handler="Fourier_Image" swapped="no"/>
+                    <signal name="clicked" handler="directFourier" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -591,6 +592,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="valign">center</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <property name="max_length">3</property>
                     <property name="width_chars">3</property>
                     <property name="max_width_chars">3</property>
                     <property name="shadow_type">none</property>
@@ -598,7 +600,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="input_purpose">number</property>
                     <property name="adjustment">adjustment1</property>
                     <property name="climb_rate">1</property>
-                    <signal name="value-changed" handler="On_Frequency_From" swapped="no"/>
+                    <signal name="value-changed" handler="onFrequencyFrom" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -628,6 +630,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="valign">center</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <property name="max_length">4</property>
                     <property name="width_chars">3</property>
                     <property name="max_width_chars">3</property>
                     <property name="shadow_type">none</property>
@@ -636,7 +639,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="adjustment">adjustment2</property>
                     <property name="climb_rate">1</property>
                     <property name="value">1</property>
-                    <signal name="value-changed" handler="On_Frequency_To" swapped="no"/>
+                    <signal name="value-changed" handler="onFrequencyTo" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -645,7 +648,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="Freq_destroy">
+                  <object class="GtkButton" id="cut_frequencies">
                     <property name="label" translatable="yes">Подавить</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
@@ -655,6 +658,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="margin_right">10</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">False</property>
+                    <signal name="clicked" handler="cutFrequencies" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -704,6 +708,7 @@ omega_j = delta omega×j - delta omega× m/2</property>
                     <property name="margin_bottom">10</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">False</property>
+                    <signal name="clicked" handler="inverseFourier" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
